--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <!-- navak icon  -->
-    <link rel="icon" href="navak.ico" />
+    <!-- <link rel="icon" href="./navak.ico" /> -->
     <!-- link to uikit css styling package -->
     <link
       rel="stylesheet"
