--- a/client/public/index.html
+++ b/client/public/index.html
@@ -15,7 +15,10 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/uikit@3.6.18/dist/css/uikit.min.css"
     />
-
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
     <title>Navak Academy</title>
   </head>
   <body>
